--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ node_modules
 .settings/
 *.sublime-workspace
 
+*.db
+
 # IDE - VSCode
 .vscode/*
 !.vscode/settings.json
@@ -40,3 +42,5 @@ Thumbs.db
 
 .nx/cache
 .nx/workspace-data
+
+vite.config.*.timestamp*
